# Sysopy

./: .gitignore  CMakeLists.txt  main.c
cw01/zad1/: CMakeLists.txt  library.c  library.h
cw01/zad2/: CMakeLists.txt  main.c  raport2.txt
cw01/zad3a/: CMakeLists.txt  main.c  results3a.txt
cw01/zad3b/: CMakeLists.txt  main.c  results3b.txt  runInFor.sh
cw02/: README.md
cw02/zad1/: CMakeLists.txt  README.MD  komentarz.txt  main.c  run.sh  tests-copy.sh  tests.sh  wyniki-copy.txt  wyniki.txt
cw02/zad2/: CMakeLists.txt  README.MD  dirReader.h  main.c  tests.sh
cw03/: README.MD
cw03/zad1/: README.MD  dirReader.h  main.c
cw03/zad2/: CMakeLists.txt  README.MD  main.c  monitor.c  monitor.h  tester.c
cw03/zad3/: CMakeLists.txt  README.MD  main.c  monitor.c  monitor.h  tester.c
cw04/: CMakeLists.txt  Readme.md  main.c  main_2.c
cw04/zad1/: main_1.c  main_2.c
cw04/zad2/: CMakeLists.txt  argsProcessor.h  fileAnalyzer.c  fileAnalyzer.h  main.c  monitor.c  monitor.h
cw04/zad3a/: CMakeLists.txt  catcher.c  catcherLib.c  catcherLib.h  inits.c  sender.c  senderLib.c  senderLib.h
cw04/zad3b/: CMakeLists.txt  argsProcessor.c  argsProcessor.h  catcher.c  inits.h  sender.c  senderLib.c
cw05/: Readme.md
cw05/zad1/: CMakeLists.txt  file.txt  main.c
cw05/zad2/: CMakeLists.txt  master.c  run.sh  slave.c
cw06/: README.md
cw06/zad1/: argsProcessor.h  client.c  communication.h  server.c
cw06/zad2/: CMakeLists.txt  argsProcessor.c  client.c  communication.h  server.c
cw07/: README.MD
cw07/zad1/: CMakeLists.txt  argsProcessor.c  argsProcessor.h  init.c  load.c  load.h  loader.c  sysopy.c  sysopy.h  truck.c
cw07/zad2/: CMakeLists.txt  init.c  load.c  load.h  loader.c  truck.c
cw08/: CMakeLists.txt  README.MD  Times.txt  filterGenerator.py  image.c  image.h  int.pgm  main.c  out.pgm  sysopy.h  test.sh
cw08/filters/: filterGenerator.py
cw08/img/: out-airplane-10.pgm  out-airplane-3.pgm  out-airplane-30.pgm  out-airplane-50.pgm  out-airplane-65.pgm  out-ariplane-blur.pgm  out-ariplane-edges.pgm  out-ariplane.pgm  out.pgm
cw09/: CMakeLists.txt  README.MD  main.c  queue.c  queue.h
cw10/: README.MD
cw10/zad1/: client.c  client.h  server.c  server.h
cw10/zad2/: CMakeLists.txt  client.c  client.h  eng.txt  server.c  server.h  sockets.h  sysopy.h  utlis.h
kolosy/msg/posix/zad3/: receiver.c  sender.c
kolosy/msg/systemV/zad3/: receiver.c  sender.c
kolosy/mutex/kozlak/: zad1.c
kolosy/sem/posix/zad1/: common.txt  main.c
kolosy/sem/systemV/zad3/: common.txt  main.c
kolosy/shm/posix/zad2/: receiver.c  sender.c
kolosy/shm/systemV/zad2/: receiver.c  sender.c
kolosy/sockets/zad2/: receiver.c  sender.c
kolosy/sockets/zad2-tcp/: receiver.c  sender.c
kolosy/threads/zad1/: main.c
zad1lib/: CMakeLists.txt  library.c  library.h
